add controles IP LF